k8s/service.yaml
# /k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contact-api-service
  labels:
    app: contact-api
spec:
  selector:
    app: contact-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort # ← ALB Ingress Controller will route to this
