k8s/ingress.yaml
# /k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contact-api-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: "8000"
spec:
  rules:
    - http:
        paths:
          - path: /contact
            pathType: Prefix
            backend:
              service:
                name: contact-api-service
                port:
                  number: 80
          - path: /health
            pathType: Exact
            backend:
              service:
                name: contact-api-service
                port:
                  number: 80
